# TransformerSum

./: pyproject.toml  setup.cfg  setup.py
TransformerSum/: __init__.py  abstractive.py  convert_to_extractive.py  data.py  extractive.py  main.py
